{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 393,
  "lineage": "fa02b1d7-7e95-535d-4fc2-25a420f0025f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MRT1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:route-table/rtb-08188fe41fed113c5",
            "default_route_table_id": "rtb-08188fe41fed113c5",
            "id": "rtb-08188fe41fed113c5",
            "owner_id": "905418222700",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0808d987aa978381b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MRT1"
            },
            "tags_all": {
              "Name": "MRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW1_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MRT2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:route-table/rtb-04078dcd95050156c",
            "default_route_table_id": "rtb-04078dcd95050156c",
            "id": "rtb-04078dcd95050156c",
            "owner_id": "905418222700",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077dc34aaf00abee5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MRT2"
            },
            "tags_all": {
              "Name": "MRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW2_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a0b135dd3edbd92",
            "arn": "arn:aws:ec2:us-east-2:905418222700:elastic-ip/eipalloc-04a0b135dd3edbd92",
            "domain": "vpc",
            "id": "eipalloc-04a0b135dd3edbd92",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-147-112.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.147.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74902dfae909243",
            "arn": "arn:aws:ec2:us-east-1:905418222700:elastic-ip/eipalloc-0e74902dfae909243",
            "domain": "vpc",
            "id": "eipalloc-0e74902dfae909243",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-42-190.compute-1.amazonaws.com",
            "public_ip": "44.194.42.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "V1PrivateLinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:905418222700:instance/i-06eff0cef55217214",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06eff0cef55217214",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "04May2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f8ed2ed64cbd3c5",
            "private_dns": "ip-10-10-2-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a223513e92f514c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff67e03f019efa7e",
            "tags": {
              "Name": "V1PrivateLinux"
            },
            "tags_all": {
              "Name": "V1PrivateLinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a91b8744378b4a4"
            ]
          },
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh",
            "aws_subnet.V1PrivateSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "V1PublicLinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:905418222700:instance/i-097e7f19af0223973",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097e7f19af0223973",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "04May2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a760f1dc3ce11bd",
            "private_dns": "ip-10-10-1-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.167",
            "public_ip": "44.220.62.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095b6355c4265e6db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e325eec8ef3d3417",
            "tags": {
              "Name": "V1PublicLinux"
            },
            "tags_all": {
              "Name": "V1PublicLinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a91b8744378b4a4"
            ]
          },
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh",
            "aws_subnet.V1PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "V2PrivateLinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02bf8ce06a8ed6092",
            "arn": "arn:aws:ec2:us-east-2:905418222700:instance/i-0d8621c9c9b992a73",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8621c9c9b992a73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "19May2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0973888679dce900e",
            "private_dns": "ip-20-20-2-92.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.20.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a65eab3d62ae2ad5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a597e52b056f73d",
            "tags": {
              "Name": "V2PrivateLinux"
            },
            "tags_all": {
              "Name": "V2PrivateLinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f72c02eb9f29e2fc"
            ]
          },
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh2",
            "aws_subnet.V2PrivateSubnet_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "V2PublicLinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02bf8ce06a8ed6092",
            "arn": "arn:aws:ec2:us-east-2:905418222700:instance/i-001cff7abbce9330c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001cff7abbce9330c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "19May2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c2bee9abc539479",
            "private_dns": "ip-20-20-1-194.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.20.1.194",
            "public_ip": "13.58.125.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050a8993b2c7bc1a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005b9088af838961a",
            "tags": {
              "Name": "V2PublicLinux"
            },
            "tags_all": {
              "Name": "V2PublicLinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f72c02eb9f29e2fc"
            ]
          },
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh2",
            "aws_subnet.V2PublicSubnet_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:internet-gateway/igw-0808d987aa978381b",
            "id": "igw-0808d987aa978381b",
            "owner_id": "905418222700",
            "tags": {
              "Name": "IGW1"
            },
            "tags_all": {
              "Name": "IGW1"
            },
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:internet-gateway/igw-077dc34aaf00abee5",
            "id": "igw-077dc34aaf00abee5",
            "owner_id": "905418222700",
            "tags": {
              "Name": "IGW2"
            },
            "tags_all": {
              "Name": "IGW2"
            },
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "dependencies": [
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74902dfae909243",
            "association_id": "eipassoc-0fc82fde20d317d67",
            "connectivity_type": "public",
            "id": "nat-0b10b7582e66462b5",
            "network_interface_id": "eni-0dc6b5c4f5f8b37b0",
            "private_ip": "10.10.1.99",
            "public_ip": "44.194.42.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e325eec8ef3d3417",
            "tags": {
              "Name": "NGW1"
            },
            "tags_all": {
              "Name": "NGW1"
            }
          },
          "dependencies": [
            "aws_eip.eip_call",
            "aws_subnet.V1PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a0b135dd3edbd92",
            "association_id": "eipassoc-09a18de47369dd6d1",
            "connectivity_type": "public",
            "id": "nat-0d39495b7bfe9fa90",
            "network_interface_id": "eni-0d8a7f0ad4a6bf970",
            "private_ip": "20.20.1.26",
            "public_ip": "18.223.147.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005b9088af838961a",
            "tags": {
              "Name": "NGW2"
            },
            "tags_all": {
              "Name": "NGW2"
            }
          },
          "dependencies": [
            "aws_eip.eip2_call",
            "aws_subnet.V2PublicSubnet_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CRT1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:route-table/rtb-0ebad2be221270229",
            "id": "rtb-0ebad2be221270229",
            "owner_id": "905418222700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b10b7582e66462b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.20.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0e2f6671025f50dd7"
              }
            ],
            "tags": {
              "Name": "CRT1"
            },
            "tags_all": {
              "Name": "CRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_call",
            "aws_nat_gateway.NGW1_call",
            "aws_subnet.V1PublicSubnet_call",
            "aws_subnet.V2PrivateSubnet_call",
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call",
            "aws_vpc_peering_connection.vpc1_vpc2_peering_requestor_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CRT2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:route-table/rtb-09aa8044a469ce3c5",
            "id": "rtb-09aa8044a469ce3c5",
            "owner_id": "905418222700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d39495b7bfe9fa90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0e2f6671025f50dd7"
              }
            ],
            "tags": {
              "Name": "CRT2"
            },
            "tags_all": {
              "Name": "CRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2_call",
            "aws_nat_gateway.NGW2_call",
            "aws_subnet.V1PrivateSubnet_call",
            "aws_subnet.V2PublicSubnet_call",
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call",
            "aws_vpc_peering_connection.vpc1_vpc2_peering_requestor_call",
            "aws_vpc_peering_connection_accepter.vpc1_vpc2_peering_acceptor_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt1_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e19d4672052442f5",
            "route_table_id": "rtb-0ebad2be221270229",
            "subnet_id": "subnet-0ff67e03f019efa7e"
          },
          "dependencies": [
            "aws_eip.eip_call",
            "aws_nat_gateway.NGW1_call",
            "aws_route_table.CRT1_call",
            "aws_subnet.V1PrivateSubnet_call",
            "aws_subnet.V1PublicSubnet_call",
            "aws_subnet.V2PrivateSubnet_call",
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call",
            "aws_vpc_peering_connection.vpc1_vpc2_peering_requestor_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt2_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0655100e2adab022e",
            "route_table_id": "rtb-09aa8044a469ce3c5",
            "subnet_id": "subnet-08a597e52b056f73d"
          },
          "dependencies": [
            "aws_eip.eip2_call",
            "aws_nat_gateway.NGW2_call",
            "aws_route_table.CRT2_call",
            "aws_subnet.V1PrivateSubnet_call",
            "aws_subnet.V2PrivateSubnet_call",
            "aws_subnet.V2PublicSubnet_call",
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call",
            "aws_vpc_peering_connection.vpc1_vpc2_peering_requestor_call",
            "aws_vpc_peering_connection_accepter.vpc1_vpc2_peering_acceptor_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mrt1_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebbb8eca0c37e1f5",
            "route_table_id": "rtb-08188fe41fed113c5",
            "subnet_id": "subnet-0e325eec8ef3d3417"
          },
          "dependencies": [
            "aws_default_route_table.MRT1_call",
            "aws_internet_gateway.IGW1_call",
            "aws_subnet.V1PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mrt2_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffacd71a31f963da",
            "route_table_id": "rtb-04078dcd95050156c",
            "subnet_id": "subnet-005b9088af838961a"
          },
          "dependencies": [
            "aws_default_route_table.MRT2_call",
            "aws_internet_gateway.IGW2_call",
            "aws_subnet.V2PublicSubnet_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGP_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:security-group/sg-06a91b8744378b4a4",
            "description": "Allow  inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-06a91b8744378b4a4",
            "ingress": [],
            "name": "SecurityGP_http_ss",
            "name_prefix": "",
            "owner_id": "905418222700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGP_http_ss"
            },
            "tags_all": {
              "Name": "SecurityGP_http_ss"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGP_http_ssh2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:security-group/sg-0f72c02eb9f29e2fc",
            "description": "Allow  inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f72c02eb9f29e2fc",
            "ingress": [],
            "name": "SecurityGP_http_ss2",
            "name_prefix": "",
            "owner_id": "905418222700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGP_http_ss2"
            },
            "tags_all": {
              "Name": "SecurityGP_http_ss2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "V1PrivateSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:subnet/subnet-0ff67e03f019efa7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff67e03f019efa7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V1PrivateSubnet"
            },
            "tags_all": {
              "Name": "V1PrivateSubnet"
            },
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "V1PublicSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:subnet/subnet-0e325eec8ef3d3417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e325eec8ef3d3417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V1PublicSubnet"
            },
            "tags_all": {
              "Name": "V1PublicSubnet"
            },
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "V2PrivateSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:subnet/subnet-08a597e52b056f73d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "20.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a597e52b056f73d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V2PrivateSubnet"
            },
            "tags_all": {
              "Name": "V2PrivateSubnet"
            },
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "dependencies": [
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "V2PublicSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:subnet/subnet-005b9088af838961a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "20.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b9088af838961a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V2PublicSubnet"
            },
            "tags_all": {
              "Name": "V2PublicSubnet"
            },
            "vpc_id": "vpc-0cff28c8e22a50133"
          },
          "dependencies": [
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:vpc/vpc-06cd97d66b11a8f38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0626bcb8d34592fdf",
            "default_route_table_id": "rtb-08188fe41fed113c5",
            "default_security_group_id": "sg-04b476fbf15120c80",
            "dhcp_options_id": "dopt-03b59ebebb4037e48",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cd97d66b11a8f38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08188fe41fed113c5",
            "owner_id": "905418222700",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:vpc/vpc-0cff28c8e22a50133",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.20.0.0/16",
            "default_network_acl_id": "acl-0ea4d78eccf5904e9",
            "default_route_table_id": "rtb-04078dcd95050156c",
            "default_security_group_id": "sg-0f350f1b7e40545a7",
            "dhcp_options_id": "dopt-02c29b7f5960e399f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cff28c8e22a50133",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04078dcd95050156c",
            "owner_id": "905418222700",
            "tags": {
              "Name": "VPC2"
            },
            "tags_all": {
              "Name": "VPC2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc1_vpc2_peering_requestor_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0e2f6671025f50dd7",
            "peer_owner_id": "905418222700",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0cff28c8e22a50133",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc1_vpc2_peering_requestor"
            },
            "tags_all": {
              "Name": "vpc1_vpc2_peering_requestor"
            },
            "vpc_id": "vpc-06cd97d66b11a8f38"
          },
          "dependencies": [
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "vpc1_vpc2_peering_acceptor_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e2f6671025f50dd7",
            "peer_owner_id": "905418222700",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0cff28c8e22a50133",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Side": "vpc1_vpc2_peering_acceptor"
            },
            "tags_all": {
              "Side": "vpc1_vpc2_peering_acceptor"
            },
            "vpc_id": "vpc-06cd97d66b11a8f38",
            "vpc_peering_connection_id": "pcx-0e2f6671025f50dd7"
          },
          "dependencies": [
            "aws_vpc.vpc1_call",
            "aws_vpc.vpc2_call",
            "aws_vpc_peering_connection.vpc1_vpc2_peering_requestor_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:security-group-rule/sgr-00645ad2688cc7bf8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00645ad2688cc7bf8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06a91b8744378b4a4",
            "security_group_rule_id": "sgr-00645ad2688cc7bf8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:security-group-rule/sgr-01f8dfdb7d99e996c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01f8dfdb7d99e996c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f72c02eb9f29e2fc",
            "security_group_rule_id": "sgr-01f8dfdb7d99e996c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh2",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:security-group-rule/sgr-0f8a27176d4431196",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f8a27176d4431196",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06a91b8744378b4a4",
            "security_group_rule_id": "sgr-0f8a27176d4431196",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418222700:security-group-rule/sgr-0512e051491f7c415",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0512e051491f7c415",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f72c02eb9f29e2fc",
            "security_group_rule_id": "sgr-0512e051491f7c415",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecurityGP_http_ssh2",
            "aws_vpc.vpc2_call"
          ]
        }
      ]
    }
  ]
}